	* Fixed bug #16023: Deprecate unused / old files in typo3/ that belong to the old, removed backend

2010-10-17  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #15998: Create a new API to send mails based on SwiftMailer to replace t3lib_htmlmail

2010-10-17  Benjamin Mack  <benni@typo3.org>

	* Added feature #16026: Added hook / Cannot hook into the marker replacement functionality for BE templates
	* Fixed bug #16020: Streamline usage of template.php:dynTabMenu
	* Fixed bug #16022: Size calculation function can only deal with integers
	* Fixed bug #16006: Remove the checkbox that clears the input fields in TCE-forms and replace it with a sprite icon (Thanks to Jo Hasenau)

2010-10-16  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15696: Implement TypoScript conditions for the current page record (Thanks to Stefan Neufeind)
	* Follow-up to #15576: Code for t3lib_message_ErrorpageMessage was contained twice
	* Fixed bug #15976: [version] Reference to global array $TCA without fetching from global scope

2010-10-16  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15868: Provide function to open debug messages in a popup (Thanks to Stefan Galinski)
	* Fixed bug #15799: Uninitialized variables in t3lib (Thanks to Oliver Klee)

2010-10-16  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16021: TCEmain: Put visibility functions to the appropriate methods (Thanks to Tolleiv Nietsch)
	* Fixed bug #14835: IRRE Move-Icon should have curser:move (Thanks to Georg Ringer)
	* Fixed bug #15799: Uninitialized variables in t3lib within TCEmain (Thanks to Oliver Klee)
	* Fixed bug #15799: Uninitialized variables in t3lib within version extension (Thanks to Oliver Klee)
	* Fixed bug #15576: Enable customization for fatal error messages in the backend and frontend / Make all page errors RuntimeExceptions and unify BE and FE fatal errors in a single HTML template (Thanks to Reinhard Führicht, Aske Ertmann)