@@ -9,6 +9,12 @@ table.typo3-CSM tr.typo3-CSM-itemRow td {
 	padding: 2px 6px;
 }
 
+/* the 1px image between every contextmenu group needs to be set to block, otherwise the border cell is way too high
+   see https://developer.mozilla.org/en/Images,_Tables,_and_Mysterious_Gaps#Setting_images_to_be_blocks */
+table.typo3-CSM tr.bgColor2 td img {
+	display: block;
+}
+
 /* - - - - - - - - - - - - - - - - - - - - -
 special backend elements
 - - - - - - - - - - - - - - - - - - - - - */
